pedro_respaldiza/session1/exercise02/wordpress.yaml
# Exercise 2 of session 1: Mariadb deployment
# Pedro Ignacio Respaldiza Hidalgo (aka Iñaki Respaldiza)
# K8s Training user: pedro_respaldiza
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
  namespace: exercise-02
  labels:
    app: wordpress
    type: frontend
spec:
  selector:
    app: wordpress
    type: frontend
  ports:
  - name: http-sv-port
    port: 80
    targetPort: http-port
  - name: https-sv-port
    port: 443
    targetPort: https-port
  type: ClusterIP
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: wordpress-deployment
  namespace: exercise-02
  labels:
    app: wordpress
    type: frontend
    track: stable
spec:
  replicas: 3  
  template:
    metadata:
      labels:
        app: wordpress
        type: frontend
        track: stable
    spec:
      containers:
        - name: wordpress
          image: bitnami/wordpress:4.9.4
          ports:
            - containerPort: 80
              name: http-port
            - containerPort: 443
              name: https-port
          readinessProbe:
            exec:
              command:
                - test
                - '`find alive.txt -mmin -1`'
            initialDelaySeconds: 5
            periodSeconds: 15
          livenessProbe:
            exec:
              command:
                - test
                - '`find alive.txt -mmin -1`'
            initialDelaySeconds: 15
            periodSeconds: 15
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: wordpress-canary-deployment
  namespace: exercise-02
  labels:
    app: wordpress
    type: frontend
    track: canary
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: wordpress
        type: frontend
        track: canary
    spec:
      containers:
        - name: wordpress
          image: bitnami/wordpress:4.9.5
          ports:
            - containerPort: 80
              name: http-port
            - containerPort: 443
              name: https-port
          readinessProbe:
            httpGet:
              path: /wp-login.php
              port: http
            initialDelaySeconds: 60
            periodSeconds: 30
          livenessProbe:
            httpGet:
              path: /wp-login.php
              port: http
            initialDelaySeconds: 90
            periodSeconds: 60
